--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Matt's Frontend Nanodegree Udacity Blog</title>
+        <meta name="description" content="Matt's Frontend Nanodegree Udacity Blog" />
+    </head>
+    <body>
+        <p>Hello World!</p>
+    </body>
+</html>
