--- a/blog-post2.html
+++ b/blog-post2.html
@@ -18,25 +18,21 @@
                     </div>
                 </section>
                 <nav>
-                    <a href=blog-post.html>Blog Post 1</a><a href="blog-post2.html">Blog Post 2</a>
+                    <a href=index.html>Home</a><a href="blog-post.html">Blog Post 1</a>
                 </nav>
             </header>
-            <section id="content">
-                <div class="content-container">
-                    <div id="about">
-                        <h2>About Me</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra nam libero justo laoreet sit amet cursus sit. Enim nulla aliquet porttitor lacus luctus accumsan tortor. Pulvinar mattis nunc sed blandit libero volutpat sed cras ornare. Cras ornare arcu dui vivamus arcu felis bibendum ut. Tortor dignissim convallis aenean et tortor. Morbi tincidunt augue interdum velit euismod. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Consectetur a erat nam at lectus. Nullam vehicula ipsum a arcu cursus vitae congue mauris.
-                        </p>
-                    </div>
-                    <div id="image-area">
-                        <figure>
-                            <img src="img/pizza.jpg" alt="Pizza in the student apartment">
-                            <figcaption>Pizza in the student apartment</figcaption>
-                          </figure>
-                    </div>
+            <div id="blog-content">
+                <div class="blog-content-container">
+                    <article class="content">
+                        Velit egestas dui id ornare arcu. Amet est placerat in egestas erat imperdiet. Habitant morbi tristique senectus et netus et malesuada fames. Mattis rhoncus urna neque viverra justo nec ultrices. Massa massa ultricies mi quis hendrerit dolor. Velit ut tortor pretium viverra suspendisse. Rutrum tellus pellentesque eu tincidunt. Netus et malesuada fames ac turpis egestas sed. Porttitor lacus luctus accumsan tortor. Eu turpis egestas pretium aenean. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus. Vivamus at augue eget arcu dictum varius duis at consectetur. Id neque aliquam vestibulum morbi blandit. Turpis massa tincidunt dui ut.
+                    </article>
+                    <section class="sidebar">
+                        <h2>Blog Post 2</h2>
+                        <h3>Author: Matt Christensen</h3>
+                        <img src="img/island.jpg" alt="Forest" />
+                    </section>
                 </div>
-            </section>
+            </div>
             <footer>
                 <div class="footer-container">
                     <div id="copyright">© Matt Christensen 2020</div>
