--- a/blog-post.html
+++ b/blog-post.html
@@ -18,25 +18,21 @@
                     </div>
                 </section>
                 <nav>
-                    <a href=blog-post.html>Blog Post 1</a><a href="blog-post2.html">Blog Post 2</a>
+                    <a href=index.html>Home</a><a href="blog-post2.html">Blog Post 2</a>
                 </nav>
             </header>
-            <section id="content">
-                <div class="content-container">
-                    <div id="about">
-                        <h2>About Me</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra nam libero justo laoreet sit amet cursus sit. Enim nulla aliquet porttitor lacus luctus accumsan tortor. Pulvinar mattis nunc sed blandit libero volutpat sed cras ornare. Cras ornare arcu dui vivamus arcu felis bibendum ut. Tortor dignissim convallis aenean et tortor. Morbi tincidunt augue interdum velit euismod. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Consectetur a erat nam at lectus. Nullam vehicula ipsum a arcu cursus vitae congue mauris.
-                        </p>
-                    </div>
-                    <div id="image-area">
-                        <figure>
-                            <img src="img/pizza.jpg" alt="Pizza in the student apartment">
-                            <figcaption>Pizza in the student apartment</figcaption>
-                          </figure>
-                    </div>
+            <div id="blog-content">
+                <div class="blog-content-container">
+                    <article class="content">
+                        Amet porttitor eget dolor morbi non. Morbi tincidunt ornare massa eget egestas purus viverra accumsan. Nullam vehicula ipsum a arcu. At in tellus integer feugiat scelerisque varius morbi enim nunc. Erat imperdiet sed euismod nisi porta. Scelerisque felis imperdiet proin fermentum leo vel orci porta non. Proin nibh nisl condimentum id venenatis a condimentum. Pulvinar pellentesque habitant morbi tristique. Nibh cras pulvinar mattis nunc sed. Lobortis elementum nibh tellus molestie nunc non blandit. Faucibus purus in massa tempor nec feugiat. Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum est. Tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Elit at imperdiet dui accumsan.
+                    </article>
+                    <section class="sidebar">
+                        <h2>Blog Post 1</h2>
+                        <h3>Author: Matt Christensen</h3>
+                        <img src="img/forest.jpg" alt="Forest" />
+                    </section>
                 </div>
-            </section>
+            </div>
             <footer>
                 <div class="footer-container">
                     <div id="copyright">© Matt Christensen 2020</div>
